--- a/theme/academy_clean/style/academy.css
+++ b/theme/academy_clean/style/academy.css
@@ -117,6 +117,11 @@ div#page {
   margin-top: 1em;
 }
 
+/* Main Content */
+.pagelayout-report #page-content #region-main {
+    overflow-x: auto;
+}
+
 /* AV Gallery (Moodle Database)
 ---------------------------*/
 .path-mod-data-view .media-library-single-template {
